// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests/atelier.test.js[2m > [22mToolshot[2m > [22mcomponents/Explorer.tools.svelte: Multiple levels 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <nav
    class="s-949zNf21XPuY"
  >
    <ol
      class="s-949zNf21XPuY"
    />
  </nav>
  <!--&lt;BreadCrumb&gt;-->
   
  <ul
    class="s-YQBR31bjQxRq"
  >
    <li
      class="s-YQBR31bjQxRq isCurrent"
    >
      <div
        class="s-YQBR31bjQxRq"
      >
        <span
          class="material-icons symbol s-YQBR31bjQxRq"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
    <li
      class="s-YQBR31bjQxRq isCurrent"
    >
      <div
        class="s-YQBR31bjQxRq folder"
      >
        <span
          class="material-icons symbol s-YQBR31bjQxRq"
        >
          folder_open
        </span>
        Folder A
      </div>
       
    </li>
    <li
      class="s-YQBR31bjQxRq isCurrent"
    >
      <div
        class="s-YQBR31bjQxRq folder"
      >
        <span
          class="material-icons symbol s-YQBR31bjQxRq"
        >
          folder_open
        </span>
        Folder D
      </div>
       
    </li>
  </ul>
  <!--&lt;ToolGroup&gt;-->
  <!--&lt;Explorer&gt;-->
</span>
`;

exports[`tests/atelier.test.js[2m > [22mToolshot[2m > [22mcomponents/Explorer.tools.svelte: Single level 1`] = `
<span
  class="s-7qAc1DaxWaj4"
>
  <nav
    class="s-949zNf21XPuY"
  >
    <ol
      class="s-949zNf21XPuY"
    />
  </nav>
  <!--&lt;BreadCrumb&gt;-->
   
  <ul
    class="s-YQBR31bjQxRq"
  >
    <li
      class="s-YQBR31bjQxRq isCurrent"
    >
      <div
        class="s-YQBR31bjQxRq"
      >
        <span
          class="material-icons symbol s-YQBR31bjQxRq"
        >
          architecture
        </span>
        Component #1
      </div>
       
    </li>
    <li
      class="s-YQBR31bjQxRq isCurrent"
    >
      <div
        class="s-YQBR31bjQxRq"
      >
        <span
          class="material-icons symbol s-YQBR31bjQxRq"
        >
          architecture
        </span>
        Component #2
      </div>
       
    </li>
    <li
      class="s-YQBR31bjQxRq isCurrent"
    >
      <div
        class="s-YQBR31bjQxRq"
      >
        <span
          class="material-icons symbol s-YQBR31bjQxRq"
        >
          architecture
        </span>
        Component #3
      </div>
       
    </li>
  </ul>
  <!--&lt;ToolGroup&gt;-->
  <!--&lt;Explorer&gt;-->
</span>
`;
